[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email triage OpenEnv"
authors = [{ name = "MSDev67" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.hatch.build.targets.wheel]
packages = ["server"]